# rocprofiler-compute-glog-fork

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  counters.py  pyproject.toml  requirements.txt  rocprof-compute-requirements.txt  select-metrics.py
tests/: CMakeLists.txt  conftest.py  generate_test_analyze_workloads.py  test_TCP_counters.py  test_analyze_commands.py  test_analyze_workloads.py  test_autogen_config.py  test_db_connector.py  test_gpu_specs.py  test_import_workloads.py  test_profile_general.py  test_utils.py
tests/workloads/dispatch_0_1/MI300A_A1/: pmc_dispatch_info.csv
tests/workloads/ipblocks_CPC/MI200/: sysinfo.csv
tests/workloads/ipblocks_SQ_SPI_TA_TCC_CPF/MI300X_A1/: sysinfo.csv
tests/workloads/ipblocks_TCP/MI300X_A1/: pmc_dispatch_info.csv
tests/workloads/join_type_grid/MI100/: sysinfo.csv
tests/workloads/kernel_inv_str/MI300A_A1/: sysinfo.csv
tests/workloads/no_roof/MI350/: SQ_LEVEL_WAVES.csv  log.txt  pmc_dispatch_info.csv  pmc_perf.csv  pmc_perf_0.csv  pmc_perf_2.csv  pmc_perf_3.csv  pmc_perf_4.csv  pmc_perf_6.csv  profiling_config.yaml  sysinfo.csv
tests/workloads/no_roof/MI350/perfmon/: SQ_IFETCH_LEVEL.txt  pmc_perf_4.txt  (+8 more)
tests/workloads/vcopy/MI300X_A1/: pmc_dispatch_info.csv
tests/workloads/vcopy/MI300X_A1_rocpd/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
tests/workloads/vcopy/MI350/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  pmc_perf_1.csv  pmc_perf_5.csv  pmc_perf_7.csv  profiling_config.yaml
(+286 files in other folders)
